tests/semantic_errors/testcase06.c
// mismatch between declaration and definition parameters main function

int main(string);

int main(void){
    return 2;
}